--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,23 @@
 h1 {
-    color: red;
-    text-align: center;
+  color: blue;
+  text-align: center;
+  font-style:oblique;
+  font-size:60px;
 }
 
 h2 {
-    font-style: italic;
-    text-align: center;
+  color:chocolate;
+  text-align: center;
+  font-style: italic;
+  font-size: 30px;
 }
 
-p {
-    font-family: sans-serif;
+h3 {
+  font-size: 30px;
 }
 
 ul {
-    font-size: 20px;
-    line-height: 30px;
+  font-weight:600;
+  font-size:20px;
+  line-height:40px;
 }
